# CMakeList.txt : CMake project for Lexical Analyser, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Lexical Analyser")

# Add source to this project's executable.
add_executable (CMakeTarget "Lexical Analyser.cpp" "Lexical Analyser.h")

# TODO: Add tests and install targets if needed.
